--- a/VideoGallery/index.html
+++ b/VideoGallery/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="video-container">
-        <video src="images/vid-1.mp4" loop muted autoplay controls></video>
+        <video src="videos/vid-1.mp4" loop muted autoplay controls></video>
     </div>
 
 </div>
