--- a/TabHeader/index.html
+++ b/TabHeader/index.html
@@ -16,7 +16,7 @@
             CSS is the language we use to style a Web page.
         </div>
         <div class="tabContent" id="javascript">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi quia optio incidunt enim minima nostrum! Animi, ea non quasi possimus necessitatibus sequi fugiat error aliquid illum nemo, velit natus esse. 
+            JavaScript is the world's most popular programming language. JavaScript is the programming language of the Web. JavaScript is easy to learn.
         </div>
         <div class="tabContent" id="jquery">
             jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers. With a combination of versatility and extensibility, jQuery has changed the way that millions of people write JavaScript.
